--- a/references.bib
+++ b/references.bib
@@ -2554,3 +2554,9 @@
   publisher={Hobart press}
 }
 
+@book{stepanov2014,
+  title={From mathematics to generic programming},
+  author={Stepanov, Alexander A and Rose, Daniel E},
+  year={2014},
+  publisher={Pearson Education}
+}
